<resources>
    <string name="app_name">FreeNotes</string>
    <string name="write_author_name">Write author name</string>
    <string name="upload">UPLOAD</string>
    <string name="select_book_by_clicking">Select Book by Clicking</string>
    <string name="notes">NOTES</string>
    <string name="book">BOOK</string>
    <string name="write_book_name">write book name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Free_Notes">Free Notes</string>
</resources>