<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeRayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadBook">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:orientation="vertical"
            android:padding="10dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BookName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"


                android:text="Type "
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"/>



            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="50dp">

                <RadioButton
                    android:id="@+id/book_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/notes_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textAppearance="?android:textAppearanceMedium"
                    />
            </RadioGroup>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="Author Name :"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/write_author_name" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/book_name_by_user"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:text="Book Name : "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_text_book_name_by_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/write_book_name" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="Uploaded by  "
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                 />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>



        <LinearLayout
            android:id ="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/upload_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:src ="@drawable/ic_launcher_background"
                android:text="@string/select_book_by_clicking"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>





        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="useful link :"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/link_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                />
        </LinearLayout>




        <Button
            android:id="@+id/upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="80dp"
            android:background="@color/blue"
            android:text="@string/upload" />

        </LinearLayout>


    </ScrollView>




</RelativeLayout>